Clean up white space; correct nav links

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,9 +4,9 @@ body {
     background-color: black;
     font-family: Helvetica;
     font-size: 22px;
+    margin: 0;
     opacity: 0.9;
     text-align: center;
-    margin: 0;
 }
 
 .flex-container {
@@ -16,9 +16,9 @@ body {
 }
 
 .main {
-    padding-top: 69px;
-    opacity: 0.9;
     margin: auto;
+    opacity: 0.9;
+    padding-top: 69px;
     width: 1200px;
 }
 /* header */
@@ -26,8 +26,8 @@ header {
     background-color: black;
     border-bottom: 1px solid seashell;
     height: 69px;
-    min-width: 897px;
     margin: 0;
+    min-width: 897px;
     position: fixed;
     width: 100%;
     z-index: 1;
@@ -46,8 +46,8 @@ header {
 .flex-container nav {
     flex-grow: 1;
     margin-right: 10px;
-    text-align: right;
     min-width: 360px;
+    text-align: right;
 }
 
 nav span {
@@ -56,16 +56,16 @@ nav span {
 }
 
 header a {
-    text-decoration: underline;
     color: seashell;
+    text-decoration: underline;
 }
 
 /* mission section */
 #mission {
-    height: 700px;
     background-image: url("../images/img-mission-background.jpg");
-    width: 1200px;
+    height: 700px;
     padding-top: 70px;
+    width: 1200px;
 }
 
 #mission-header-wrapper {
@@ -73,22 +73,24 @@ header a {
     margin: auto;
     width: 100%;
 }
+
 #mission h2,
 #mission h4 {
     margin: 0;
     padding: 10px;
 }
+
 /* featured teas secton */
 #featured {
-    margin: auto;
-    width: 1000px;
     height: 700px;
+    margin: auto;
     padding-top: 70px;
+    width: 1000px;
 }
 
 #featured-header-wrapper {
-    text-align: center;
     margin: auto;
+    text-align: center;
 }
 
 #featured-flex-menu {
@@ -112,10 +114,10 @@ header a {
 
 /* locations section */
 #locations {
-   height: 500px;
-    width: 1200px;
-    padding-top: 70px;
     background-image: url("../images/img-locations-background.jpg");
+    height: 500px;
+    padding-top: 70px;
+    width: 1200px;
 }
 
 #locations h2 {
@@ -123,22 +125,20 @@ header a {
 }
 
 #locations .flex-container {
-    padding-top: 5px;
     margin: auto;
+    padding-top: 5px;
     width: 1100px;
 }
 
 .locations-box {
-    display: flex;
     background-color: black;
-/*    height: 300px;
-    width: 300px;
-*/    margin: 5px 20px;
-    opacity: 1.0;
-    padding: 10px;
+    display: flex;
     flex-basis: 280px;
     flex-direction: column;
     justify-content: center;
+    margin: 5px 20px;
+    opacity: 1.0;
+    padding: 10px;
 }
 
 .locations-box h3 {
@@ -147,20 +147,14 @@ header a {
 
 /* contact info */
 #contact {
-    min-height: 200px;
     display: flex;
     flex-direction: column;
+    min-height: 200px;
     justify-content: center;
 }
-
 
 /* footer */
 footer {
     margin: 20px;
     text-align: left;
-}
-
-
-#copyright {
-    
 }
